# LegisAI

./: .env  .gitignore  Document_OCR.ipynb  Explainability_Layer_v2.py  README.md  app_cli.py  backend_api.py  common.py  crew.py  dummy_agents.py  dummy_backend.py  package-lock.json  requirements.txt  structure.txt
.github/workflows/: blank.yml  build.yml  sonar-project.properties
Explainability_Layer_Sample_Testing/: Explainability_Layer.py
HITL/: HITL_agent.py
HITL/backend/: api.py  feedback_handler.py  hitl.ipynb  langgraph_setup.py  requirement.txt
agents/: Document_OCR.ipynb  Speech to text.ipynb  crew.py  documentation.py  llm.py  requirements.txt
agents/Compliance/: .env  agents.yaml  compliance_crew.ipynb  tasks.yaml
agents/Research & Retrieval Intelligence/: AI_Agent_research.py  AI_Agent_research_upgrade.py  Ollama_test.ipynb  RR_Inteligence.ipynb  retrieval_jupyter.ipynb
agents/compliance/: agent.py  loaders.py  tasks.py  tools.py
agents/explainability/: .env.example  .gitignore  app_cli.py  (+6 more)
backend/: deps.py  json_utils.py  main.py  schemas.py
chatbot/: README.md  chatbot_service.py  config.py  streamlit_app.py
datasets/: canadian_laws.ipynb  dataset_link.txt  us.ipynb
frontend/: App.tsx  index.html  package-lock.json  package.json  streamlit_app.py  tailwind.config.ts
lexen-legal-ai/: README.md  crew.py  custom_query.py  env  gitignore  main.py  pyproject.toml  requirements.txt  setup.sh  test_connection.py
lexen-legal-ai/config/: agents.yaml  tasks.yaml
lexen-legal-ai/output/: legal_summary.md
scripts/: build_index.py
(+68 files in other folders)
